--- a/pages/expert/index.wxml
+++ b/pages/expert/index.wxml
@@ -2,7 +2,7 @@
 <view class="expert1" wx:if="{{expertItem.length>0}}">
 	<view  bindtap='toExpertDetail' data-id="{{item.id}}" data-url="/pages/expert/info" class="expert1-item flex plr30 ptb20 bg0" wx:for="{{expertItem}}">
 		<view class="base">
-			<view class="expert1-item-img"><image mode="aspectFill" src="https://ossweb-img.qq.com/images/lol/web201310/skin/big84001.jpg"></image> </view>
+			<view class="expert1-item-img"><image mode="aspectFill" src="{{item.avatar}}"></image> </view>
 		</view>
 		<view class="auto pl30">
 			<view class="flex column jcsa" style="height: 100%;">
