--- a/pages/expert/index.wxml
+++ b/pages/expert/index.wxml
@@ -1,14 +1,14 @@
 <!-- 专家列表展示 -->
-<view class="expert1" wx:if="{{expertItem.length>0}}">
-	<view  bindtap='toExpertDetail' data-id="{{item.id}}" data-url="/pages/expert/info" class="expert1-item flex plr30 ptb20 bg0" wx:for="{{expertItem}}">
+<view class="expert1">
+	<navigator hover-class="none" url="/pages/expert/info" class="expert1-item flex plr30 ptb20 bg0" wx:for="{{4}}">
 		<view class="base">
-			<view class="expert1-item-img"><image mode="aspectFill" src="{{item.avatar}}"></image> </view>
+			<view class="expert1-item-img"><image mode="aspectFill" src="https://ossweb-img.qq.com/images/lol/web201310/skin/big84001.jpg"></image> </view>
 		</view>
 		<view class="auto pl30">
 			<view class="flex column jcsa" style="height: 100%;">
 				<view class="auto">
-					<view class="fs32 ftc">{{item.name}}</view>
-					<view class="fs28">{{item.description}}</view>
+					<view class="fs32 ftc">李小宝</view>
+					<view class="fs28">擅长12121</view>
 				</view>
 				<view class="base">
 					<view class="fl fs28 fic">13890l浏览</view>
@@ -16,5 +16,5 @@
 				</view>
 			</view>
 		</view>
-	</view>
+	</navigator>
 </view>
