--- a/pages/science/index.wxml
+++ b/pages/science/index.wxml
@@ -1,41 +1,41 @@
   <!-- 列表展示 begin -->
-  <view class="itemBox2 p3p3" wx:if="{{scienceItem.length>0}}">
+  <view class="itemBox2 p3p3">
   	<view class="itemBox2-tit mb30">
   		<view class="tit">正在进行中</view>
   	</view>
-  	<view class="itemBox2-list radius20 mb30">
-  		<view class="itemBox2-item mlr20 ptb20" wx:for="{{scienceItem}}">
-  			<view bindtap='toScienceDetail' data-id="{{item.id}}" class="radius10" style="border:1rpx solid #efefef;">
-	  			<view class="itemBox2-item-img"><image class="image" mode="aspectFill" src="{{item.img}}"></image></view>
+  	<view class="itemBox2-list radius20 mb30" wx:for="{{2}}">
+  		<view class="itemBox2-item mlr20 ptb20">
+  			<navigator url="/pages/science/info" hover-class="none" class="radius10" style="border:1rpx solid #efefef;">
+	  			<view class="itemBox2-item-img"><image class="image" mode="aspectFill" src="https://ossweb-img.qq.com/images/lol/web201310/skin/big84001.jpg"></image></view>
 	  			<view class="itemBox2-item-box plr20 ptb20">
-	  				<view class="fs30 mb10 fw ftc nowarp1">{{item.title}}</view>
-	  				<view class="fs28 mb20 nowarp1" style="color:red;">起止时间：{{item.startTime}}-{{item.endTime}}</view>
+	  				<view class="fs30 mb10 fw ftc nowarp1">关于防止病虫害的科技讲坛</view>
+	  				<view class="fs28 mb20 nowarp1" style="color:red;">开始时间：2020年6月23日-2020年6月23日</view>
 	  				<view class="flex itemBox2-item-people">
 	  					<view class="base people"><image class="image" mode="aspectFill" src="https://ossweb-img.qq.com/images/lol/web201310/skin/big84001.jpg"></image></view>
-	  					<view class="auto fs28 fw pl20"><text class="mr20">{{item.preacher}}</text><text>教授</text><text class="fr color2">立即报名</text></view>
+	  					<view class="auto fs28 fw pl20"><text class="mr20">王小五</text><text>教授</text><text class="fr color2">立即报名</text></view>
 	  				</view>
 	  			</view>
-  			</view>
+  			</navigator>
   		</view>
   	</view>
   </view>
   <!-- 列表展示 begin -->
-  <view class="itemBox1 p3p3" wx:if="{{scienceItem1.length>0}}">
+  <view class="itemBox1 p3p3">
   	<view class="itemBox1-tit mb30">
-  		<view class="tit">已结束</view>
+  		<view class="tit">正在进行中</view>
   	</view>
   	<view class="itemBox1-list radius20">
-  		<view class="itemBox1-item flex mlr30 ptb30" wx:for="{{scienceItem1}}"  bindtap='toScienceDetail' data-id="{{item.id}}">
+  		<view class="itemBox1-item flex mlr30 ptb30" wx:for="{{6}}">
   			<view class="auto itemBox1-item-box">
-  				<view class="fs30 mb10 fw ftc nowarp1">{{item.title}}</view>
-  				<view class="fs28 mb20 ftc nowarp1">起止时间：{{item.startTime}}-{{item.endTime}}</view>
+  				<view class="fs30 mb10 fw ftc nowarp1">关于防止病虫害的科技讲坛</view>
+  				<view class="fs28 mb20 ftc nowarp1">开始时间：2020年6月23日</view>
   				<view class="flex itemBox1-item-people">
-  					<view class="base people"><image class="image" src="{{item.img}}"></image></view>
-  					<view class="fs28 fw pl20"><text class="mr20">{{item.preacher}}</text><text>{{item.preacherIdentity}}</text></view>
+  					<view class="base people"><image class="image" mode="aspectFill" src="https://ossweb-img.qq.com/images/lol/web201310/skin/big84001.jpg"></image></view>
+  					<view class="fs28 fw pl20"><text class="mr20">王小五</text><text>教授</text></view>
   				</view>
   			</view>
   			<view class="base itemBox1-item-img">
-  				<image class="image" mode="aspectFill" src="{{item.img}}"></image>
+  				<image class="image" mode="aspectFill" src="https://ossweb-img.qq.com/images/lol/web201310/skin/big84001.jpg"></image>
   			</view>
   		</view>
   	</view>
