--- a/pages/expert/info.wxml
+++ b/pages/expert/info.wxml
@@ -2,18 +2,18 @@
   <view class="cu-item shadow">
     <view class="image" style="width:auto;">
       <image src="https://ossweb-img.qq.com/images/lol/web201310/skin/big10006.jpg" mode="widthFix"></image>
-      <view class="cu-tag bg-blue">史诗</view>
+      <view class="cu-tag bg-blue">{{info.name}}</view>
       <view class="cu-bar bg-shadeBottom">
-        <text class="text-cut">我已天理为凭，踏入这片荒芜，不再受凡人的枷锁遏制。我已天理为凭，踏入这片荒芜，不再受凡人的枷锁遏制。</text>
+        <text class="text-cut">{{info.area}}</text>
       </view>
     </view>
     <view class="cu-list menu-avatar">
       <view class="cu-item">
         <view class="cu-avatar round lg" style="background-image:url(https://ossweb-img.qq.com/images/lol/web201310/skin/big10006.jpg);"></view>
         <view class="content flex-sub">
-          <view class="text-grey">正义天使 凯尔</view>
+          <view class="text-grey">{{info.name}}</view>
           <view class="text-gray text-sm flex justify-between">
-            十天前
+            {{info.area}}
             <view class="text-gray text-sm">
               <text class="cuIcon-attentionfill margin-lr-xs"></text> 10
               <text class="cuIcon-appreciatefill margin-lr-xs"></text> 20
@@ -33,46 +33,49 @@
     </view>
   </view>
 </scroll-view>
-
-<view class="">详情</view>
-<view class="">
-	<view class="cu-list menu-avatar comment solids-top">
-      <view class="cu-item">
-        <view class="cu-avatar round" style="background-image:url(https://ossweb-img.qq.com/images/lol/img/champion/Morgana.png);"></view>
-        <view class="content">
-          <view class="text-grey">莫甘娜</view>
-          <view class="text-gray text-content text-df">
-            凯尔，你被自己的光芒变的盲目。
+  <block wx:if="{{TabCur==0}}">
+  <view class="plr30 bort bg0 ptb30">
+      <rich-text nodes="{{info.content}}"></rich-text>
+  </view>
+  </block>
+  <block wx:if="{{TabCur==1}}">
+  <view class="bg0">
+  	<view class="cu-list menu-avatar comment solids-top">
+        <view class="cu-item">
+          <view class="cu-avatar round" style="background-image:url(https://ossweb-img.qq.com/images/lol/img/champion/Morgana.png);"></view>
+          <view class="content">
+            <view class="text-grey">莫甘娜</view>
+            <view class="text-gray text-content text-df">
+              凯尔，你被自己的光芒变的盲目。
+            </view>
+            <view class="margin-top-sm flex justify-between">
+              <view class="text-gray text-df">2018年12月4日</view>
+              <view>
+                <text class="cuIcon-appreciatefill text-red"></text>
+                <text class="cuIcon-messagefill text-gray margin-left-sm"></text>
+              </view>
+            </view>
           </view>
-          <view class="margin-top-sm flex justify-between">
-            <view class="text-gray text-df">2018年12月4日</view>
-            <view>
-              <text class="cuIcon-appreciatefill text-red"></text>
-              <text class="cuIcon-messagefill text-gray margin-left-sm"></text>
+        </view>
+        <view class="cu-item">
+          <view class="cu-avatar round" style="background-image:url(https://ossweb-img.qq.com/images/lol/web201310/skin/big10006.jpg);"></view>
+          <view class="content">
+            <view class="text-grey">凯尔</view>
+            <view class="text-gray text-content text-df">
+              妹妹，如果不是为了飞翔，我们要这翅膀有什么用?
+            </view>
+            <view class="margin-top-sm flex justify-between">
+              <view class="text-gray text-df">2018年12月4日</view>
+              <view>
+                <text class="cuIcon-appreciate text-gray"></text>
+                <text class="cuIcon-messagefill text-gray margin-left-sm"></text>
+              </view>
             </view>
           </view>
         </view>
       </view>
-      <view class="cu-item">
-        <view class="cu-avatar round" style="background-image:url(https://ossweb-img.qq.com/images/lol/web201310/skin/big10006.jpg);"></view>
-        <view class="content">
-          <view class="text-grey">凯尔</view>
-          <view class="text-gray text-content text-df">
-            妹妹，如果不是为了飞翔，我们要这翅膀有什么用?
-          </view>
-          <view class="margin-top-sm flex justify-between">
-            <view class="text-gray text-df">2018年12月4日</view>
-            <view>
-              <text class="cuIcon-appreciate text-gray"></text>
-              <text class="cuIcon-messagefill text-gray margin-left-sm"></text>
-            </view>
-          </view>
-        </view>
-      </view>
-    </view>
-
-</view>
-
+  </view>
+  </block>
 
 <view class="cu-bar bg-white tabbar border fixed bottom left shop" style="top:auto;">
 	<button class="action" open-type="contact">
