--- a/pages/science/info.wxss
+++ b/pages/science/info.wxss
@@ -1,12 +1,6 @@
 page{
 	background-color: #fff;
 }
-.ence-header{
-}
-.ence-header-img{
-	width: 96rpx;
-	height: 96rpx;
-}
-.ence-header{
-	border-bottom: 1px solid #efefef;
+.cu-form-group .title {
+  min-width: calc(4em + 30rpx);
 }
