--- a/pages/binding-phone/binding-phone.wxss
+++ b/pages/binding-phone/binding-phone.wxss
@@ -13,7 +13,7 @@ page {
 .binding-phone .item {
   display: flex;
   padding: 20rpx 0;
-  height: 60rpx;
+  /* height: 60rpx; */
   line-height: 60rpx;
   border-bottom: 2rpx solid #e1e1e1;
 }
