--- a/pages/delivery-address/delivery-address.wxml
+++ b/pages/delivery-address/delivery-address.wxml
@@ -7,7 +7,7 @@
       </view>
       <view class='txt'>您还没有收货地址</view>
     </view>
-    <radio-group class="radio-group" bindchange="radioChange">
+    <radio-group class="radio-group" bindchange="radioChange" style="display:block;">
       <block wx:for="{{addressList}}">
         <view class='address'>
           <view class='personal' bindtap='selAddrToOrder' data-item="{{item}}">
