--- a/pages/science/info.wxml
+++ b/pages/science/info.wxml
@@ -5,7 +5,7 @@
 		</view>
 		<view class="auto aic pl30">
 			<view class="ftc fs36">{{info.title}}</view>
-			<view class="fpc fs28">{{info.publisher}}</view>
+			<view class="fpc fs28"><text class="mr30">宣讲者：{{info.preacher}}</text><text>{{info.preacherIdentity}}</text></view>
 		</view>
 		<view class="wx">
 			<view class="align fs70"><text class="cuIcon-weixin lg text-green"></text></view>
@@ -13,100 +13,67 @@
 	</view>
 	<view class="ence-detail ptb30">
 		<view class="fpc fs30 mb20"><text class="cuIcon-location fs32 text-gray mr10"></text>{{info.addr}}</view>
+		<view class="fpc fs30 mb20"><text class="cuIcon-my fs32 text-gray mr10"></text>{{info.publisher}}</view>
 		<view class="fpc fs30 mb20"><text class="cuIcon-mobile fs32 text-gray mr10"></text>{{info.phone}}</view>
 		<view class="fpc fs30 mb20"><text class="cuIcon-remind fs32 text-gray mr10"></text>起止时间：{{info.startTime}}-{{info.endTime}}</view>
-		<view class="fpc fs30 mb20"><text class="cuIcon-pic fs32 text-gray mr10"></text>活动图片</view>
-		<view class="fpc fs30 mb20">
-			<view class="bg-white">
-				<view class="grid col-4 grid-square">
-				  <view class="bg-img" wx:for="{{4}}" wx:key style="background-image:url(https://ossweb-img.qq.com/images/lol/web201310/skin/big1000{{index+1}}.jpg);"></view>
+		<template wx:if="{{info.imgUrl.length>0}}">
+			<view class="fpc fs30 mb20"><text class="cuIcon-pic fs32 text-gray mr10"></text>宣传图片</view>
+			<view class="fpc fs30 mb20">
+				<view class="bg-white">
+					<view class="grid col-4 grid-square">
+					  <view class="bg-img" wx:for="{{info.imgUrl}}" wx:key style="background-image:url({{item}});"></view>
+					</view>
 				</view>
 			</view>
-		</view>
+		</template>
 	</view>
 	<view class="intro mb50">	
 		<view class="cu-bar bg-white">
 			<view class="action sub-title" style="margin-left: 0rpx;">
-			  <text class="text-xl text-bold ftc">活动详情</text>
+			  <text class="text-xl text-bold ftc">宣讲内容</text>
 			  <text class="bg-green"></text>
 			  <!-- last-child选择器-->
 			</view>
 		</view>
 		<view>
-			<rich-text nodes="{{info.title}}"></rich-text>
+			<rich-text nodes="{{info.description}}"></rich-text>
 		</view>
 	</view>	
-	<view class="intro mb50">	
+	<view class="intro mb50" wx:if="{{commentItem.length>0}}">	
 		<view class="cu-bar bg-white">
 			<view class="action sub-title" style="margin-left: 0rpx;">
-			  <text class="text-xl text-bold ftc">活动评价</text>
+			  <text class="text-xl text-bold ftc">科技服务评论</text>
 			  <text class="bg-green"></text>
 			  <!-- last-child选择器-->
 			</view>
 		</view>
 		<view style="margin-left: -30rpx;margin-right: -30rpx;">
-			<view class="cu-list menu-avatar comment">
+			<view class="cu-list menu-avatar comment" wx:for="{{commentItem}}">
 			  <view class="cu-item">
 			    <view class="cu-avatar round" style="background-image:url(https://ossweb-img.qq.com/images/lol/img/champion/Morgana.png);"></view>
 			    <view class="content">
-			      <view class="text-grey">莫甘娜</view>
-			      <view class="text-gray text-content text-df">
-			        凯尔，你被自己的光芒变的盲目。
-			      </view>
-			      <view class="bg-grey padding-sm radius margin-top-sm  text-sm">
-			        <view class="flex">
-			          <view>凯尔：</view>
-			          <view class="flex-sub">妹妹，你在帮他们给黑暗找借口吗?</view>
-			        </view>
-			      </view>
-			      <view class="margin-top-sm flex justify-between">
-			        <view class="text-gray text-df">2018年12月4日</view>
-			        <view>
-			          <text class="cuIcon-appreciatefill text-red"></text>
-			          <text class="cuIcon-messagefill text-gray margin-left-sm"></text>
-			        </view>
-			      </view>
-			    </view>
-			  </view>
-			  <view class="cu-item">
-			    <view class="cu-avatar round" style="background-image:url(https://ossweb-img.qq.com/images/lol/web201310/skin/big10006.jpg);"></view>
-			    <view class="content">
-			      <view class="text-grey">凯尔</view>
-			      <view class="text-gray text-content text-df">
-			        妹妹，如果不是为了飞翔，我们要这翅膀有什么用?
-			      </view>
-			      <view class="bg-grey padding-sm radius margin-top-sm  text-sm">
-			        <view class="flex">
-			          <view>莫甘娜：</view>
-			          <view class="flex-sub">如果不能立足于大地，要这双脚又有何用?</view>
-			        </view>
-			      </view>
-			      <view class="margin-top-sm flex justify-between">
-			        <view class="text-gray text-df">2018年12月4日</view>
-			        <view>
-			          <text class="cuIcon-appreciate text-gray"></text>
-			          <text class="cuIcon-messagefill text-gray margin-left-sm"></text>
-			        </view>
-			      </view>
+			      <view class="text-grey"><text class="mr30">{{item.nickname}}</text><text>{{item.date}}</text></view>
+			      <view class="text-gray text-content text-df">{{item.content}}</view>
 			    </view>
 			  </view>
 			</view>
 		</view>
 	</view>	
 </view>
-
-<view class="plr30 ptb20 fixed bg0 bottom left" wx-if="{{info.serviceStatus=='2'}}">
-	<view bindtap='toJoinActive' class="radius10 cu-btn block bg-blue lg">报名参与活动</view>
+<view class="plr30 ptb20 fixed bg0 bottom left" wx-if="{{info.serviceStatus=='1'}}">
+	<view bindtap='toJoinActive' class="radius10 cu-btn block bg-blue lg">服务报名</view>
 </view>
-<view class="fixed bottom left bort" wx-if="{{info.serviceStatus=='1'}}">
-	<view class="box">
-	  <view class="cu-bar input">
-	    <view class="cu-avatar round" style="background-image:url(https://image.weilanwl.com/img/square-3.jpg);"></view>
-	    <view class="action">
-	      <text class="cuIcon-roundaddfill text-grey"></text>
-	    </view>
-	    <input class="solid-bottom" maxlength="300" cursor-spacing="10"></input>
-	    <button class="cu-btn bg-green shadow-blur">发送</button>
-	  </view>
-	</view>
+<view class="fixed bottom left bort" wx-if="{{info.serviceStatus=='2'}}">
+	<form bindsubmit='formSubmit'>	
+		<view class="box">
+		  <view class="cu-bar input">
+		  	<view wx:if="{{uploadImg!=''}}" class="cu-avatar round" style="background-image:url({{uploadImg}});"></view>
+		    <view class="action" style="display: none;">
+		      <text bindtap="ChooseImage" class="cuIcon-roundaddfill text-grey"></text>
+		    </view>
+		    <input class="solid-bottom" name="content" placeholder="请输入您的感想" maxlength="300" cursor-spacing="10"></input>
+		    <button form-type='submit' class="cu-btn bg-green shadow-blur">发送</button>
+		  </view>
+		</view>
+	</form>
 </view>
