--- a/pages/user/user.wxml
+++ b/pages/user/user.wxml
@@ -9,7 +9,7 @@
       <open-data type="userNickName"></open-data>
     </view>
   </view>
-  <view class='binding-phone'>
+  <view class='binding-phone' style="display:none;">
     <text class='show-tip'>绑定手机号后可查看订单和领取优惠券，</text>
     <text class='gotobinding' bindtap='toBindingPhone'>去绑定</text>
   </view>
@@ -49,8 +49,7 @@
       </view>
     </view>
     <!--end 订单状态 -->
-
-    <view class="prod-col">
+    <view class="prod-col" style="display:none;">
       <view class="col-item" bindtap='myCollectionHandle'>
         <view class="num">{{collectionCount}}</view>
         <view class="tit">我的收藏</view>
@@ -64,26 +63,26 @@
         <view class="tit">我的足迹</view>
       </view>
     </view>
-
     <view class='my-menu'>
-      <view class='memu-item' bindtap='toDistCenter'>
-        <view class="i-name">
-          <image src='../../images/icon/promotion.png'></image>
-          <text>分销中心</text>
-        </view>
-        <view class='arrowhead'></view>
-      </view>
       <view class='memu-item' bindtap='toCouponCenter'>
         <view class="i-name">
           <image src='../../images/icon/getCoupon.png'></image>
-          <text>领券中心</text>
+          <text>活动招募申请</text>
         </view>
         <view class='arrowhead'></view>
       </view>
       <view class='memu-item' bindtap='toMyCouponPage'>
         <view class="i-name">
           <image src='../../images/icon/myCoupon.png'></image>
-          <text>我的优惠券</text>
+          <text>科技活动申请</text>
+        </view>
+        <view class='arrowhead'></view>
+      </view>
+
+      <view class='memu-item' bindtap='myCollectionHandle'>
+        <view class="i-name">
+          <image src='../../images/icon/promotion.png'></image>
+          <text>我的收藏</text>
         </view>
         <view class='arrowhead'></view>
       </view>
